[gd_scene load_steps=8 format=3 uid="uid://d3xps6jjr5lwr"]

[ext_resource type="PackedScene" uid="uid://dqkaagaewh7un" path="res://vr_theater.glb" id="1_g22v7"]
[ext_resource type="Script" uid="uid://yvetrkk2iukm" path="res://vr_theater.gd" id="2_5o3kl"]
[ext_resource type="Script" uid="uid://0q5bhkvxeol0" path="res://camera_3d.gd" id="2_mac0m"]
[ext_resource type="PackedScene" uid="uid://wlxl704lvaqr" path="res://3D models/plant1.fbx" id="4_buu1m"]
[ext_resource type="PackedScene" uid="uid://1cpxnal3p45u" path="res://3D models/plant2.fbx" id="5_ktnak"]
[ext_resource type="PackedScene" uid="uid://bfi8qer2jpavt" path="res://3D models/plant3.fbx" id="6_cawg3"]

[sub_resource type="Environment" id="Environment_buu1m"]
ambient_light_source = 2
ambient_light_color = Color(0.360949, 0.360949, 0.360949, 1)
ambient_light_energy = 1.68

[node name="Node3D" type="Node3D"]

[node name="vr_theater" parent="." instance=ExtResource("1_g22v7")]
script = ExtResource("2_5o3kl")

[node name="SpotLight3D" type="SpotLight3D" parent="vr_theater"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.35834, 0)
light_color = Color(0.860478, 0.715344, 0.65045, 1)
light_energy = 5.272
light_bake_mode = 1
spot_range = 7.71
spot_angle = 35.0

[node name="SpotLight3D2" type="SpotLight3D" parent="vr_theater"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.35834, 4.82545)
light_color = Color(0.860478, 0.715344, 0.65045, 1)
light_energy = 5.0
light_bake_mode = 1
shadow_enabled = true
spot_range = 15.0
spot_angle = 45.4

[node name="SpotLight3D5" type="SpotLight3D" parent="vr_theater"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.35834, 2.85453)
light_color = Color(0.860478, 0.715344, 0.65045, 1)
light_energy = 3.144
light_bake_mode = 1
shadow_enabled = true
shadow_opacity = 0.0
spot_range = 6.957
spot_angle = 10.03

[node name="SpotLight3D6" type="SpotLight3D" parent="vr_theater"]
transform = Transform3D(1, 0.000436332, 1.90727e-11, 0, -4.37114e-08, 1, 0.000436332, -1, -4.37114e-08, 2.73887, 3.35834, 2.85453)
light_color = Color(0.860478, 0.715344, 0.65045, 1)
light_energy = 3.144
light_bake_mode = 1
shadow_enabled = true
shadow_opacity = 0.0
spot_range = 6.957
spot_angle = 10.03

[node name="SpotLight3D7" type="SpotLight3D" parent="vr_theater"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2.739, 3.358, 2.855)
light_color = Color(0.860478, 0.715344, 0.65045, 1)
light_energy = 3.144
light_bake_mode = 1
shadow_enabled = true
shadow_opacity = 0.0
spot_range = 6.957
spot_angle = 10.03

[node name="SpotLight3D3" type="SpotLight3D" parent="vr_theater"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 4.5, 3.358, 4.825)
light_color = Color(0.860478, 0.715344, 0.65045, 1)
light_energy = 5.0
light_bake_mode = 1
shadow_enabled = true
spot_range = 15.0
spot_angle = 45.4

[node name="SpotLight3D4" type="SpotLight3D" parent="vr_theater"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4.5, 3.358, 4.825)
light_color = Color(0.860478, 0.715344, 0.65045, 1)
light_energy = 5.0
light_bake_mode = 1
shadow_enabled = true
spot_range = 15.0
spot_angle = 45.4

[node name="plant1" parent="vr_theater" instance=ExtResource("4_buu1m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.65308, 0.58073, 2.82059)

[node name="plant2" parent="vr_theater" instance=ExtResource("5_ktnak")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.66127, 0.581961, 2.66146)

[node name="plant3" parent="vr_theater" instance=ExtResource("6_cawg3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00705731, 0.56918, 2.84154)

[node name="HTTPRequest" type="HTTPRequest" parent="vr_theater"]

[node name="Camera3D" type="Camera3D" parent="vr_theater"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
script = ExtResource("2_mac0m")

[node name="CanvasLayer" type="CanvasLayer" parent="vr_theater"]

[node name="ButtonDescribe" type="Button" parent="vr_theater/CanvasLayer"]
offset_left = 512.0
offset_top = 32.0
offset_right = 640.0
offset_bottom = 64.0
text = "Describe
"

[node name="ButtonResetPosition" type="Button" parent="vr_theater/CanvasLayer"]
offset_left = 512.0
offset_top = 552.0
offset_right = 640.0
offset_bottom = 584.0
text = "Reset"

[node name="ButtonForward" type="Button" parent="vr_theater/CanvasLayer"]
offset_left = 512.0
offset_top = 504.0
offset_right = 640.0
offset_bottom = 536.0
text = "Forward"

[node name="ButtonBackward" type="Button" parent="vr_theater/CanvasLayer"]
offset_left = 512.0
offset_top = 600.0
offset_right = 640.0
offset_bottom = 632.0
text = "Backward"

[node name="ButtonLeft" type="Button" parent="vr_theater/CanvasLayer"]
offset_left = 368.0
offset_top = 552.0
offset_right = 496.0
offset_bottom = 584.0
text = "Left"

[node name="ButtonRight" type="Button" parent="vr_theater/CanvasLayer"]
offset_left = 656.0
offset_top = 552.0
offset_right = 784.0
offset_bottom = 584.0
text = "Right"

[node name="ButtonImageBackward" type="Button" parent="vr_theater/CanvasLayer"]
offset_left = 304.0
offset_top = 552.0
offset_right = 352.0
offset_bottom = 584.0
text = "<"

[node name="ButtonImageForward" type="Button" parent="vr_theater/CanvasLayer"]
offset_left = 800.0
offset_top = 552.0
offset_right = 848.0
offset_bottom = 584.0
text = ">"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_buu1m")

[connection signal="button_down" from="vr_theater/CanvasLayer/ButtonDescribe" to="vr_theater" method="_on_button_describe_button_down"]
[connection signal="button_down" from="vr_theater/CanvasLayer/ButtonResetPosition" to="vr_theater/Camera3D" method="_on_button_reset_position_button_down"]
[connection signal="button_down" from="vr_theater/CanvasLayer/ButtonForward" to="vr_theater/Camera3D" method="_on_button_forward_button_down"]
[connection signal="button_up" from="vr_theater/CanvasLayer/ButtonForward" to="vr_theater/Camera3D" method="_on_button_forward_button_up"]
[connection signal="button_down" from="vr_theater/CanvasLayer/ButtonBackward" to="vr_theater/Camera3D" method="_on_button_backward_button_down"]
[connection signal="button_up" from="vr_theater/CanvasLayer/ButtonBackward" to="vr_theater/Camera3D" method="_on_button_backward_button_up"]
[connection signal="button_down" from="vr_theater/CanvasLayer/ButtonLeft" to="vr_theater/Camera3D" method="_on_button_left_button_down"]
[connection signal="button_up" from="vr_theater/CanvasLayer/ButtonLeft" to="vr_theater/Camera3D" method="_on_button_left_button_up"]
[connection signal="button_down" from="vr_theater/CanvasLayer/ButtonRight" to="vr_theater/Camera3D" method="_on_button_right_button_down"]
[connection signal="button_up" from="vr_theater/CanvasLayer/ButtonRight" to="vr_theater/Camera3D" method="_on_button_right_button_up"]
[connection signal="button_down" from="vr_theater/CanvasLayer/ButtonImageBackward" to="vr_theater" method="_on_button_image_backward_button_down"]
[connection signal="button_down" from="vr_theater/CanvasLayer/ButtonImageForward" to="vr_theater" method="_on_button_image_forward_button_down"]
